// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapBox Reducers should reduce correct state for fetchOriginGeocodingAction 1`] = `
Object {
  "deliverSimulationGeoFeatures": Array [],
  "deliverSimulationStarted": false,
  "origin": Object {
    "address": "Home",
    "coordinates": Array [
      -137,
      37,
    ],
  },
  "viewport": Object {
    "latitude": 37,
    "longitude": -137,
    "zoom": 11.5,
  },
}
`;

exports[`MapBox Reducers should reduce correct state for setDeliverGeoFeatures 1`] = `
Object {
  "deliverSimulationGeoFeatures": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            -118.46742,
            34.00534,
          ],
          Array [
            -118.47105,
            34.00321,
          ],
          Array [
            -118.47115,
            34.00309,
          ],
          Array [
            -118.47325,
            34.00463,
          ],
          Array [
            -118.47629,
            34.00289,
          ],
          Array [
            -118.48058,
            33.99993,
          ],
          Array [
            -118.48113,
            33.99954,
          ],
          Array [
            -118.48088,
            33.9993,
          ],
          Array [
            -118.48088,
            33.99928,
          ],
        ],
        "type": "LineString",
      },
      "properties": Object {},
      "type": "Feature",
    },
  ],
  "deliverSimulationStarted": false,
  "origin": Object {
    "address": "",
    "coordinates": Array [
      0,
      0,
    ],
  },
  "viewport": Object {
    "latitude": 0,
    "longitude": 0,
    "zoom": 11.5,
  },
}
`;

exports[`MapBox Reducers should reduce correct state for setDeliverSimulationStarted 1`] = `
Object {
  "deliverSimulationGeoFeatures": Array [],
  "deliverSimulationStarted": true,
  "origin": Object {
    "address": "",
    "coordinates": Array [
      0,
      0,
    ],
  },
  "viewport": Object {
    "latitude": 0,
    "longitude": 0,
    "zoom": 11.5,
  },
}
`;

exports[`MapBox Reducers should reduce correct state for setViewport 1`] = `
Object {
  "deliverSimulationGeoFeatures": Array [],
  "deliverSimulationStarted": false,
  "origin": Object {
    "address": "",
    "coordinates": Array [
      0,
      0,
    ],
  },
  "viewport": Object {
    "latitude": 37,
    "longitude": -137,
    "zoom": 11,
  },
}
`;
